<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/introLogo"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_marginTop="150dp"
                android:contentDescription="@string/intro_logo_description"
                app:srcCompat="@drawable/intro_logo" />

            <TextView
                android:id="@+id/introText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/introText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:lineSpacingExtra="10sp"
                android:text="@string/intro_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_margin="32dp"
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/get_started_button" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/intro_signIn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
